test/bad/tuple2.px

x = 9, true, 5
x.3
